@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2003 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) 2003, 2004, 2005, 2008, 2009, 2010 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -20,7 +20,7 @@
  * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
 #ifndef JNIUtility_h
@@ -56,26 +56,26 @@ namespace Bindings {
 
 class JavaParameter;
 
-const char *getCharactersFromJString(jstring aJString);
-void releaseCharactersForJString(jstring aJString, const char *s);
+const char* getCharactersFromJString(jstring);
+void releaseCharactersForJString(jstring, const char*);
 
-const char *getCharactersFromJStringInEnv(JNIEnv *env, jstring aJString);
-void releaseCharactersForJStringInEnv(JNIEnv *env, jstring aJString, const char *s);
-const jchar *getUCharactersFromJStringInEnv(JNIEnv *env, jstring aJString);
-void releaseUCharactersForJStringInEnv(JNIEnv *env, jstring aJString, const jchar *s);
+const char* getCharactersFromJStringInEnv(JNIEnv*, jstring);
+void releaseCharactersForJStringInEnv(JNIEnv*, jstring, const char*);
+const jchar* getUCharactersFromJStringInEnv(JNIEnv*, jstring);
+void releaseUCharactersForJStringInEnv(JNIEnv*, jstring, const jchar*);
 
-JNIType JNITypeFromClassName(const char *name);
+JNIType JNITypeFromClassName(const char* name);
 JNIType JNITypeFromPrimitiveType(char type);
-const char *signatureFromPrimitiveType(JNIType type);
+const char* signatureFromPrimitiveType(JNIType);
 
-jvalue getJNIField(jobject obj, JNIType type, const char *name, const char *signature);
+jvalue getJNIField(jobject, JNIType, const char* name, const char* signature);
 
-jmethodID getMethodID(jobject obj, const char *name, const char *sig);
+jmethodID getMethodID(jobject, const char* name, const char* sig);
 JNIEnv* getJNIEnv();
 JavaVM* getJavaVM();
 void setJavaVM(JavaVM*);
-    
-    
+
+
 template <typename T> struct JNICaller;
 
 template<> struct JNICaller<void> {
@@ -97,7 +97,7 @@ template<> struct JNICaller<jobject> {
     static jobject callV(jobject obj, jmethodID mid, va_list args)
     {
         return getJNIEnv()->CallObjectMethodV(obj, mid, args);
-    }    
+    }
 };
 
 template<> struct JNICaller<jboolean> {
@@ -113,7 +113,6 @@ template<> struct JNICaller<jboolean> {
     {
         return getJNIEnv()->CallStaticBooleanMethod(cls, mid, args);
     }
-    
 };
 
 template<> struct JNICaller<jbyte> {
@@ -135,7 +134,7 @@ template<> struct JNICaller<jchar> {
     static jchar callV(jobject obj, jmethodID mid, va_list args)
     {
         return getJNIEnv()->CallCharMethodV(obj, mid, args);
-    }    
+    }
 };
 
 template<> struct JNICaller<jshort> {
@@ -197,36 +196,30 @@ template<typename T> T callJNIMethodIDA(jobject obj, jmethodID mid, jvalue *args
 {
     return JNICaller<T>::callA(obj, mid, args);
 }
-    
+
 template<typename T>
-static T callJNIMethodV(jobject obj, const char *name, const char *sig, va_list args)
+static T callJNIMethodV(jobject obj, const char* name, const char* sig, va_list args)
 {
-    JavaVM *jvm = getJavaVM();
-    JNIEnv *env = getJNIEnv();
-    
-    if ( obj != NULL && jvm != NULL && env != NULL) {
+    JavaVM* jvm = getJavaVM();
+    JNIEnv* env = getJNIEnv();
+
+    if (obj && jvm && env) {
         jclass cls = env->GetObjectClass(obj);
-        if ( cls != NULL ) {
+        if (cls) {
             jmethodID mid = env->GetMethodID(cls, name, sig);
-            if ( mid != NULL )
-            {
+            if (mid) {
                 // Avoids references to cls without popping the local frame.
                 env->DeleteLocalRef(cls);
                 return JNICaller<T>::callV(obj, mid, args);
             }
-            else
-            {
-                fprintf(stderr, "%s: Could not find method: %s for %p\n", __PRETTY_FUNCTION__, name, obj);
-                env->ExceptionDescribe();
-                env->ExceptionClear();
-                fprintf (stderr, "\n");
-            }
+            fprintf(stderr, "%s: Could not find method: %s for %p\n", __PRETTY_FUNCTION__, name, obj);
+            env->ExceptionDescribe();
+            env->ExceptionClear();
+            fprintf(stderr, "\n");
 
             env->DeleteLocalRef(cls);
-        }
-        else {
+        } else
             fprintf(stderr, "%s: Could not find class for %p\n", __PRETTY_FUNCTION__, obj);
-        }
     }
 
     return 0;
@@ -237,42 +230,42 @@ T callJNIMethod(jobject obj, const char* methodName, const char* methodSignature
 {
     va_list args;
     va_start(args, methodSignature);
-    
-    T result= callJNIMethodV<T>(obj, methodName, methodSignature, args);
-    
+
+    T result = callJNIMethodV<T>(obj, methodName, methodSignature, args);
+
     va_end(args);
-    
+
     return result;
 }
-    
+
 template<typename T>
 T callJNIStaticMethod(jclass cls, const char* methodName, const char* methodSignature, ...)
 {
-    JavaVM *jvm = getJavaVM();
-    JNIEnv *env = getJNIEnv();
+    JavaVM* jvm = getJavaVM();
+    JNIEnv* env = getJNIEnv();
     va_list args;
-    
+
     va_start(args, methodSignature);
-    
+
     T result = 0;
-    
-    if (cls != NULL && jvm != NULL && env != NULL) {
+
+    if (cls && jvm && env) {
         jmethodID mid = env->GetStaticMethodID(cls, methodName, methodSignature);
-        if (mid != NULL) 
+        if (mid)
             result = JNICaller<T>::callStaticV(cls, mid, args);
         else {
             fprintf(stderr, "%s: Could not find method: %s for %p\n", __PRETTY_FUNCTION__, methodName, cls);
             env->ExceptionDescribe();
             env->ExceptionClear();
-            fprintf (stderr, "\n");
+            fprintf(stderr, "\n");
         }
     }
-    
+
     va_end(args);
-    
+
     return result;
 }
-    
+
 } // namespace Bindings
 
 } // namespace JSC
